--- a/README.org
+++ b/README.org
@@ -22,13 +22,44 @@ Our framework utilizes the near-linear time label propagation algorithm for the 
 
 * Compilation
 
-To compile please install the following dependencies:
-
+To compile install the following dependencies through your package manager:
 - Scons (http://www.scons.org/)
-- Argtable (http://argtable.sourceforge.net/)
 - OpenMPI (http://www.open-mpi.de/)
 
-Once you installed the packages compile the programs with
+Once you installed these packages you need to compile some additional dependencies.
+
+** ThunderSVM
+
+#+BEGIN_SRC sh
+cd extern/thundersvm
+git submodule init eigen && git submodule update
+mkdir build && cd build
+cmake -DUSE_CUDA=OFF -DUSE_EIGEN=ON ..
+make -j
+#+END_SRC
+
+** BayesOpt
+
+The following (Ubuntu/Debian) packages are needed for [[https://github.com/rmcantin/bayesopt][BayesOpt]]
+=libboost-dev cmake g++=
+
+then
+
+#+BEGIN_SRC sh
+cd extern/bayesopt
+cmake .
+make
+#+END_SRC
+
+you can test if the compile step worked with
+
+#+BEGIN_SRC sh
+./bin/bo_branin
+#+END_SRC
+
+** KaSVM
+
+Compile KaSVM with with
 
 #+BEGIN_SRC sh
 scons program=prepare variant=optimized_output -j 4
@@ -49,20 +80,20 @@ output of prepare
 
 # #+RESULTS:
 #+begin_example
-read csv time 0.0470669
+read csv time 0.0533679
 rows: 7400 cols: 20
-normalization time 0.000550985
-splitting time 0.00131702
+normalization time 0.00080204
+splitting time 0.00121903
 nodes - min 3703 maj 3697
-finished writing features to examples/twonorm_min_data in 0.033473
-finished writing features to examples/twonorm_maj_data in 0.033633
+finished writing features to examples/twonorm_min_data in 0.0366721
+finished writing features to examples/twonorm_maj_data in 0.035835
 #+end_example
 
 ** Classifier
 After the data has been preprocessed run the ~mlsvm~ program.
 As path argument use the path of the original data file without the extension.
 
-#+BEGIN_SRC sh :results output
+#+BEGIN_SRC sh :results output verbatim
 ./optimized_output/mlsvm examples/twonorm
 #+END_SRC
 
@@ -72,316 +103,363 @@ output of mlsvm
 #+begin_example
 num_experiments: 1
 kfold_iterations: 5
-import_kfold: 0
+sample_percent: 1
+validation_type: 0
+validation_percent: 0.1
+validation_seperate: 0
+stop rule: 0
+matching type: 3
 bidirectional: 0
-fix stop vertices: 500
 cluster_upperbound: 2147483647
 upper_bound_partition: 2147483647
 label_iterations: 10
 node_ordering: 1
+diameter_upperbound: 20
+refinement_type: 0
 num_skip_ms: 10000
 inherit_ud: 1
 timeout: 0
+cores: 0
 seed: 0
  \/\/\/\/\/\/\/\/\/ EXPERIMENT 0 \/\/\/\/\/\/\/
-io time: 0.055306
+io time: 0.074208
 full graph - min: 3703 maj: 3697 features: 20
 ------------- K-FOLD ITERATION 0 -------------
-fold time: 0.0964451
+fold time: 0.0967889
 graph - min: 2963 maj: 2958
+val - min: 296 maj: 295
 test - min: 740 maj: 739
-sample - min: 299 maj: 300
-no of coarser vertices 91 and no of edges 5752
-no of coarser vertices 91 and no of edges 6032
-coarsening time: 0.070224
-coarse nodes - min: 91 maj: 91
+calc new weights took 0.000108957
+no of coarser vertices 90 and no of edges 5530
+calc new weights took 0.000106096
+no of coarser vertices 86 and no of edges 5198
+coarsening time: 0.0456169
+coarse nodes - min: 90 maj: 86
 1st sweep with initial logC=0 logGamma=0
-log C=5.00	log gamma=0.00  	ACC=0.509	Gmean=0.129	SVs=116 (57,59)
-log C=-5.00	log gamma=-2.50  	ACC=0.963	Gmean=0.963	SVs=137 (68,69)
-log C=10.00	log gamma=7.50  	ACC=0.499	Gmean=0.000	SVs=182 (91,91)
-log C=-2.50	log gamma=5.00  	ACC=0.499	Gmean=0.000	SVs=182 (91,91)
-log C=0.00	log gamma=-7.50  	ACC=0.977	Gmean=0.977	SVs=45 (22,23)
-log C=15.00	log gamma=2.50  	ACC=0.499	Gmean=0.000	SVs=182 (91,91)
-log C=12.50	log gamma=-5.00  	ACC=0.972	Gmean=0.972	SVs=20 (11,9)
-log C=7.50	log gamma=-10.00  	ACC=0.973	Gmean=0.973	SVs=16 (9,7)
-log C=2.50	log gamma=10.00  	ACC=0.503	Gmean=0.058	SVs=182 (91,91)
-2nd sweep with logC=7.5 logGamma=-10
-log C: 7.5 log g: -10 AC:0.973 SN:0.967 SP:0.980 PPV:0.980 NPV:0.967 F1:0.973 GM:0.973 SV_min:9 SV_maj:7 TP:289 TN:294 FP:6 FN:10
-log C=5.00	log gamma=-10.00  	ACC=0.973	Gmean=0.973	SVs=18 (10,8)
-log C=7.50	log gamma=-2.50  	ACC=0.826	Gmean=0.809	SVs=42 (22,20)
-log C=12.50	log gamma=-9.02  	ACC=0.975	Gmean=0.975	SVs=16 (9,7)
-log C=15.00	log gamma=-5.00  	ACC=0.972	Gmean=0.972	SVs=20 (11,9)
-BEST (12.5,-9.02)
-log C: 12.5 log g: -9.0198 AC:0.975 SN:0.970 SP:0.980 PPV:0.980 NPV:0.970 F1:0.975 GM:0.975 SV_min:9 SV_maj:7 TP:290 TN:294 FP:6 FN:9
-init train time: 0.0554
-inital validation on testing:
-log C: 12.5 log g: -9.0198 AC:0.976 SN:0.978 SP:0.973 PPV:0.973 NPV:0.978 F1:0.976 GM:0.976 SV_min:9 SV_maj:7 TP:724 TN:719 FP:20 FN:16
-init test time: 0.00138
-min hierarchy 1 -- maj hierarchy 1
-minority uncoarsed
-uncoarsened nodes 2963 SV 9 resulting neighbors 62
-majority uncoarsed
-uncoarsened nodes 2958 SV 7 resulting neighbors 81
-min hierarchy 0 -- maj hierarchy 0
-current level nodes min 62 maj 81
-2nd sweep with logC=12.5 logGamma=-9.02
-log C=10.00	log gamma=-9.02  	ACC=0.958	Gmean=0.958	SVs=33 (16,17)
-log C=12.50	log gamma=-1.52  	ACC=0.521	Gmean=0.200	SVs=143 (62,81)
-log C=15.00	log gamma=-9.24  	ACC=0.958	Gmean=0.958	SVs=33 (15,18)
-log C=14.99	log gamma=-4.02  	ACC=0.973	Gmean=0.973	SVs=92 (41,51)
-log C=15.00	log gamma=-6.52  	ACC=0.963	Gmean=0.963	SVs=47 (21,26)
-log C=12.50	log gamma=-9.02  	ACC=0.960	Gmean=0.960	SVs=33 (15,18)
-BEST (10,-9.02)
-log C: 10 log g: -9.0198 AC:0.958 SN:0.940 SP:0.977 PPV:0.976 NPV:0.942 F1:0.957 GM:0.958 SV_min:16 SV_maj:17 TP:281 TN:293 FP:7 FN:18
-refinement at level 0 took 0.0198
-refinement time 0.0199
-best validation on testing data:
-test time 0.00171
-log C: 12.5 log g: -9.0198 AC:0.976 SN:0.978 SP:0.973 PPV:0.973 NPV:0.978 F1:0.976 GM:0.976 SV_min:9 SV_maj:7 TP:724 TN:719 FP:20 FN:16
-iteration time: 0.244
-------------- K-FOLD ITERATION 1 -------------
-fold time: 0.0937
-graph - min: 2963 maj: 2958
-test - min: 740 maj: 739
-sample - min: 316 maj: 288
-no of coarser vertices 92 and no of edges 6262
-no of coarser vertices 76 and no of edges 4304
-coarsening time: 0.0685
-coarse nodes - min: 92 maj: 76
-1st sweep with initial logC=0 logGamma=0
-log C=5.00	log gamma=0.00  	ACC=0.523	Gmean=0.000	SVs=102 (54,48)
-log C=-5.00	log gamma=-2.50  	ACC=0.722	Gmean=0.645	SVs=126 (63,63)
-log C=10.00	log gamma=7.50  	ACC=0.523	Gmean=0.000	SVs=168 (92,76)
-log C=-2.50	log gamma=5.00  	ACC=0.523	Gmean=0.000	SVs=168 (92,76)
-log C=0.00	log gamma=-7.50  	ACC=0.977	Gmean=0.977	SVs=47 (24,23)
-log C=15.00	log gamma=2.50  	ACC=0.523	Gmean=0.000	SVs=168 (92,76)
-log C=12.50	log gamma=-5.00  	ACC=0.974	Gmean=0.973	SVs=13 (7,6)
-log C=7.50	log gamma=-10.00  	ACC=0.969	Gmean=0.968	SVs=8 (4,4)
-log C=2.50	log gamma=10.00  	ACC=0.523	Gmean=0.000	SVs=168 (92,76)
-2nd sweep with logC=7.5 logGamma=-10
-log C: 7.5 log g: -10 AC:0.969 SN:0.978 SP:0.958 PPV:0.963 NPV:0.975 F1:0.970 GM:0.968 SV_min:4 SV_maj:4 TP:309 TN:276 FP:12 FN:7
-log C=5.00	log gamma=-10.00  	ACC=0.977	Gmean=0.976	SVs=12 (6,6)
-log C=7.50	log gamma=-2.50  	ACC=0.972	Gmean=0.972	SVs=39 (23,16)
-log C=12.50	log gamma=-9.82  	ACC=0.969	Gmean=0.968	SVs=8 (4,4)
-log C=15.00	log gamma=-5.00  	ACC=0.974	Gmean=0.973	SVs=13 (7,6)
-BEST (12.5,-9.82)
-log C: 12.5 log g: -9.8197 AC:0.969 SN:0.978 SP:0.958 PPV:0.963 NPV:0.975 F1:0.970 GM:0.968 SV_min:4 SV_maj:4 TP:309 TN:276 FP:12 FN:7
-init train time: 0.049
-inital validation on testing:
-log C: 12.5 log g: -9.8197 AC:0.963 SN:0.968 SP:0.959 PPV:0.960 NPV:0.967 F1:0.964 GM:0.963 SV_min:4 SV_maj:4 TP:716 TN:709 FP:30 FN:24
-init test time: 0.000776
-min hierarchy 1 -- maj hierarchy 1
-minority uncoarsed
-uncoarsened nodes 2963 SV 4 resulting neighbors 45
-majority uncoarsed
-uncoarsened nodes 2958 SV 4 resulting neighbors 34
-min hierarchy 0 -- maj hierarchy 0
-current level nodes min 45 maj 34
-2nd sweep with logC=12.5 logGamma=-9.82
-log C=10.00	log gamma=-9.82  	ACC=0.954	Gmean=0.953	SVs=24 (12,12)
-log C=12.50	log gamma=-2.32  	ACC=0.677	Gmean=0.575	SVs=79 (45,34)
-log C=14.98	log gamma=-10.81  	ACC=0.940	Gmean=0.939	SVs=21 (10,11)
-log C=14.99	log gamma=-4.82  	ACC=0.972	Gmean=0.971	SVs=49 (24,25)
-log C=15.00	log gamma=-7.32  	ACC=0.960	Gmean=0.960	SVs=28 (16,12)
-log C=12.50	log gamma=-9.82  	ACC=0.949	Gmean=0.947	SVs=23 (11,12)
-BEST (15,-10.8)
-log C: 14.98 log g: -10.811 AC:0.940 SN:0.962 SP:0.917 PPV:0.927 NPV:0.957 F1:0.944 GM:0.939 SV_min:10 SV_maj:11 TP:304 TN:264 FP:24 FN:12
-refinement at level 0 took 0.011
-refinement time 0.011
-best validation on testing data:
-test time 0.000891
-log C: 12.5 log g: -9.8197 AC:0.963 SN:0.968 SP:0.959 PPV:0.960 NPV:0.967 F1:0.964 GM:0.963 SV_min:4 SV_maj:4 TP:716 TN:709 FP:30 FN:24
-iteration time: 0.224
-------------- K-FOLD ITERATION 2 -------------
-fold time: 0.0938
-graph - min: 2963 maj: 2958
-test - min: 740 maj: 739
-sample - min: 302 maj: 300
-no of coarser vertices 77 and no of edges 4318
-no of coarser vertices 84 and no of edges 5236
-coarsening time: 0.0679
-coarse nodes - min: 77 maj: 84
-1st sweep with initial logC=0 logGamma=0
-log C=5.00	log gamma=0.00  	ACC=0.505	Gmean=0.082	SVs=100 (50,50)
-log C=-5.00	log gamma=-2.50  	ACC=0.973	Gmean=0.973	SVs=127 (64,63)
-log C=10.00	log gamma=7.50  	ACC=0.498	Gmean=0.000	SVs=161 (77,84)
-log C=-2.50	log gamma=5.00  	ACC=0.498	Gmean=0.000	SVs=161 (77,84)
-log C=0.00	log gamma=-7.50  	ACC=0.973	Gmean=0.973	SVs=47 (23,24)
-log C=15.00	log gamma=2.50  	ACC=0.498	Gmean=0.000	SVs=161 (77,84)
-log C=12.50	log gamma=-5.00  	ACC=0.968	Gmean=0.968	SVs=19 (10,9)
-log C=7.50	log gamma=-10.00  	ACC=0.952	Gmean=0.952	SVs=9 (5,4)
-log C=2.50	log gamma=10.00  	ACC=0.498	Gmean=0.000	SVs=161 (77,84)
+log C=  5.00	log gamma=  0.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=112 (59,53)
+log C= -5.00	log gamma= -2.50	time=0.00  	ACC=0.883	Gmean=0.876	SVs=135 (68,67)
+log C= 10.00	log gamma=  7.50	time=0.00  	ACC=0.501	Gmean=0.000	SVs=176 (90,86)
+log C= -2.50	log gamma=  5.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=176 (90,86)
+log C=  0.00	log gamma= -7.50	time=0.00  	ACC=0.970	Gmean=0.969	SVs=46 (22,24)
+log C= 15.00	log gamma=  2.50	time=0.01  	ACC=0.501	Gmean=0.000	SVs=176 (90,86)
+log C= 12.50	log gamma= -5.00	time=0.00  	ACC=0.959	Gmean=0.959	SVs=15 (7,8)
+log C=  7.50	log gamma=-10.00	time=0.00  	ACC=0.949	Gmean=0.949	SVs=12 (4,8)
+log C=  2.50	log gamma= 10.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=176 (90,86)
 2nd sweep with logC=12.5 logGamma=-5
-log C: 12.5 log g: -5 AC:0.968 SN:0.983 SP:0.953 PPV:0.955 NPV:0.983 F1:0.969 GM:0.968 SV_min:10 SV_maj:9 TP:297 TN:286 FP:14 FN:5
-log C=10.00	log gamma=-5.00  	ACC=0.968	Gmean=0.968	SVs=19 (10,9)
-log C=12.50	log gamma=2.50  	ACC=0.498	Gmean=0.000	SVs=161 (77,84)
-log C=15.01	log gamma=-7.50  	ACC=0.955	Gmean=0.955	SVs=10 (6,4)
-log C=15.01	log gamma=0.00  	ACC=0.505	Gmean=0.082	SVs=100 (50,50)
+log C: 12.5 log g: -5 AC:0.959 SN:0.973 SP:0.946 PPV:0.947 NPV:0.972 F1:0.960 GM:0.959 SV_min:7 SV_maj:8 TP:288 TN:279 FP:16 FN:8
+log C= 10.00	log gamma= -5.00	time=0.00  	ACC=0.959	Gmean=0.959	SVs=15 (7,8)
+log C= 12.50	log gamma=  2.50	time=0.01  	ACC=0.501	Gmean=0.000	SVs=176 (90,86)
+log C= 14.99	log gamma= -7.50	time=0.00  	ACC=0.946	Gmean=0.945	SVs=13 (4,9)
+log C= 15.00	log gamma=  0.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=112 (59,53)
 BEST (15,-7.5)
-log C: 15.01 log g: -7.5 AC:0.955 SN:0.947 SP:0.963 PPV:0.963 NPV:0.948 F1:0.955 GM:0.955 SV_min:6 SV_maj:4 TP:286 TN:289 FP:11 FN:16
-init train time: 0.0583
+log C: 14.994 log g: -7.5 AC:0.946 SN:0.980 SP:0.912 PPV:0.918 NPV:0.978 F1:0.948 GM:0.945 SV_min:4 SV_maj:9 TP:290 TN:269 FP:26 FN:6
+init train time: 0.0884
 inital validation on testing:
-log C: 15.01 log g: -7.5 AC:0.965 SN:0.959 SP:0.970 PPV:0.970 NPV:0.960 F1:0.965 GM:0.965 SV_min:6 SV_maj:4 TP:710 TN:717 FP:22 FN:30
-init test time: 0.000935
-min hierarchy 1 -- maj hierarchy 1
+log C: 14.994 log g: -7.5 AC:0.969 SN:0.977 SP:0.961 PPV:0.961 NPV:0.977 F1:0.969 GM:0.969 SV_min:4 SV_maj:9 TP:723 TN:710 FP:29 FN:17
+init test time: 0.00224
+UD refinement at level 1
 minority uncoarsed
-uncoarsened nodes 2963 SV 6 resulting neighbors 36
+uncoarsened nodes 2963 SV 4 resulting new_data 23
 majority uncoarsed
-uncoarsened nodes 2958 SV 4 resulting neighbors 34
-min hierarchy 0 -- maj hierarchy 0
-current level nodes min 36 maj 34
+uncoarsened nodes 2958 SV 9 resulting new_data 117
+current level nodes min 23 maj 117
 2nd sweep with logC=15 logGamma=-7.5
-log C=12.51	log gamma=-7.50  	ACC=0.942	Gmean=0.942	SVs=30 (18,12)
-log C=14.98	log gamma=0.00  	ACC=0.505	Gmean=0.082	SVs=70 (36,34)
-log C=14.98	log gamma=-10.00  	ACC=0.927	Gmean=0.927	SVs=23 (13,10)
-log C=15.01	log gamma=-2.50  	ACC=0.832	Gmean=0.822	SVs=70 (36,34)
-log C=14.99	log gamma=-5.00  	ACC=0.937	Gmean=0.937	SVs=47 (24,23)
-log C=15.01	log gamma=-7.50  	ACC=0.942	Gmean=0.942	SVs=30 (18,12)
+log C= 12.49	log gamma= -7.50	time=0.00  	ACC=0.948	Gmean=0.947	SVs=34 (14,20)
+log C= 14.99	log gamma=  0.00	time=0.00  	ACC=0.501	Gmean=0.058	SVs=140 (23,117)
+log C= 15.02	log gamma=-10.00	time=0.00  	ACC=0.956	Gmean=0.956	SVs=23 (11,12)
+log C= 14.99	log gamma= -2.50	time=0.00  	ACC=0.508	Gmean=0.130	SVs=138 (23,115)
+log C= 15.02	log gamma= -5.00	time=0.00  	ACC=0.932	Gmean=0.931	SVs=50 (15,35)
+log C= 14.99	log gamma= -7.50	time=0.00  	ACC=0.948	Gmean=0.947	SVs=34 (14,20)
 BEST (15,-10)
-log C: 14.978 log g: -10 AC:0.927 SN:0.917 SP:0.937 PPV:0.936 NPV:0.918 F1:0.926 GM:0.927 SV_min:13 SV_maj:10 TP:277 TN:281 FP:19 FN:25
-refinement at level 0 took 0.012
-refinement time 0.0121
+log C: 15.019 log g: -10 AC:0.956 SN:0.936 SP:0.976 PPV:0.975 NPV:0.938 F1:0.955 GM:0.956 SV_min:11 SV_maj:12 TP:277 TN:288 FP:7 FN:19
+refinement at level 0 took 0.0298
+refinement time 0.0299
 best validation on testing data:
-test time 0.00106
-log C: 15.01 log g: -7.5 AC:0.965 SN:0.959 SP:0.970 PPV:0.970 NPV:0.960 F1:0.965 GM:0.965 SV_min:6 SV_maj:4 TP:710 TN:717 FP:22 FN:30
-iteration time: 0.234
+test time 0.00274
+log C: 15.019 log g: -10 AC:0.938 SN:0.896 SP:0.980 PPV:0.978 NPV:0.904 F1:0.935 GM:0.937 SV_min:11 SV_maj:12 TP:663 TN:724 FP:15 FN:77
+iteration time: 0.2636
+------------- K-FOLD ITERATION 1 -------------
+fold time: 0.0968
+graph - min: 2963 maj: 2958
+val - min: 296 maj: 295
+test - min: 740 maj: 739
+calc new weights took 0.0001
+no of coarser vertices 86 and no of edges 4774
+calc new weights took 0.0001
+no of coarser vertices 95 and no of edges 6086
+coarsening time: 0.0451
+coarse nodes - min: 86 maj: 95
+1st sweep with initial logC=0 logGamma=0
+log C=  5.00	log gamma=  0.00	time=0.00  	ACC=0.503	Gmean=0.058	SVs=120 (60,60)
+log C= -5.00	log gamma= -2.50	time=0.00  	ACC=0.981	Gmean=0.981	SVs=142 (71,71)
+log C= 10.00	log gamma=  7.50	time=0.00  	ACC=0.499	Gmean=0.000	SVs=181 (86,95)
+log C= -2.50	log gamma=  5.00	time=0.00  	ACC=0.499	Gmean=0.000	SVs=181 (86,95)
+log C=  0.00	log gamma= -7.50	time=0.00  	ACC=0.978	Gmean=0.978	SVs=46 (22,24)
+log C= 15.00	log gamma=  2.50	time=0.00  	ACC=0.499	Gmean=0.000	SVs=181 (86,95)
+log C= 12.50	log gamma= -5.00	time=0.00  	ACC=0.975	Gmean=0.975	SVs=17 (5,12)
+log C=  7.50	log gamma=-10.00	time=0.00  	ACC=0.963	Gmean=0.962	SVs=10 (2,8)
+log C=  2.50	log gamma= 10.00	time=0.01  	ACC=0.499	Gmean=0.000	SVs=181 (86,95)
+2nd sweep with logC=7.5 logGamma=-10
+log C: 7.5 log g: -10 AC:0.963 SN:0.990 SP:0.936 PPV:0.939 NPV:0.989 F1:0.964 GM:0.962 SV_min:2 SV_maj:8 TP:293 TN:276 FP:19 FN:3
+log C=  5.00	log gamma=-10.00	time=0.00  	ACC=0.976	Gmean=0.976	SVs=15 (7,8)
+log C=  7.50	log gamma= -2.50	time=0.00  	ACC=0.905	Gmean=0.902	SVs=48 (22,26)
+log C= 12.50	log gamma= -9.29	time=0.00  	ACC=0.963	Gmean=0.962	SVs=10 (2,8)
+log C= 15.00	log gamma= -5.00	time=0.00  	ACC=0.975	Gmean=0.975	SVs=17 (5,12)
+BEST (12.5,-9.29)
+log C: 12.5 log g: -9.2908 AC:0.963 SN:0.990 SP:0.936 PPV:0.939 NPV:0.989 F1:0.964 GM:0.962 SV_min:2 SV_maj:8 TP:293 TN:276 FP:19 FN:3
+init train time: 0.0813
+inital validation on testing:
+log C: 12.5 log g: -9.2908 AC:0.957 SN:0.986 SP:0.927 PPV:0.931 NPV:0.986 F1:0.958 GM:0.956 SV_min:2 SV_maj:8 TP:730 TN:685 FP:54 FN:10
+init test time: 0.00218
+UD refinement at level 1
+minority uncoarsed
+uncoarsened nodes 2963 SV 2 resulting new_data 13
+majority uncoarsed
+uncoarsened nodes 2958 SV 8 resulting new_data 85
+current level nodes min 13 maj 85
+2nd sweep with logC=12.5 logGamma=-9.29
+log C= 10.00	log gamma= -9.29	time=0.00  	ACC=0.949	Gmean=0.949	SVs=21 (9,12)
+log C= 12.50	log gamma= -1.79	time=0.00  	ACC=0.501	Gmean=0.058	SVs=98 (13,85)
+log C= 14.99	log gamma=-13.87	time=0.00  	ACC=0.948	Gmean=0.948	SVs=18 (9,9)
+log C= 14.98	log gamma= -4.29	time=0.00  	ACC=0.848	Gmean=0.837	SVs=56 (13,43)
+log C= 15.00	log gamma= -6.79	time=0.00  	ACC=0.942	Gmean=0.942	SVs=32 (11,21)
+log C= 12.50	log gamma= -9.29	time=0.00  	ACC=0.949	Gmean=0.949	SVs=21 (9,12)
+BEST (15,-13.9)
+log C: 14.986 log g: -13.875 AC:0.948 SN:0.939 SP:0.956 PPV:0.955 NPV:0.940 F1:0.947 GM:0.948 SV_min:9 SV_maj:9 TP:278 TN:282 FP:13 FN:18
+refinement at level 0 took 0.0182
+refinement time 0.0183
+best validation on testing data:
+test time 0.0021
+log C: 12.5 log g: -9.2908 AC:0.957 SN:0.986 SP:0.927 PPV:0.931 NPV:0.986 F1:0.958 GM:0.956 SV_min:2 SV_maj:8 TP:730 TN:685 FP:54 FN:10
+iteration time: 0.2438
+------------- K-FOLD ITERATION 2 -------------
+fold time: 0.0969
+graph - min: 2963 maj: 2958
+val - min: 296 maj: 295
+test - min: 740 maj: 739
+calc new weights took 0.0001
+no of coarser vertices 87 and no of edges 5602
+calc new weights took 0.0001
+no of coarser vertices 87 and no of edges 5510
+coarsening time: 0.0443
+coarse nodes - min: 87 maj: 87
+1st sweep with initial logC=0 logGamma=0
+log C=  5.00	log gamma=  0.00	time=0.00  	ACC=0.499	Gmean=0.000	SVs=109 (53,56)
+log C= -5.00	log gamma= -2.50	time=0.00  	ACC=0.909	Gmean=0.905	SVs=133 (67,66)
+log C= 10.00	log gamma=  7.50	time=0.00  	ACC=0.501	Gmean=0.000	SVs=174 (87,87)
+log C= -2.50	log gamma=  5.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=174 (87,87)
+log C=  0.00	log gamma= -7.50	time=0.00  	ACC=0.978	Gmean=0.978	SVs=44 (21,23)
+log C= 15.00	log gamma=  2.50	time=0.00  	ACC=0.501	Gmean=0.000	SVs=174 (87,87)
+log C= 12.50	log gamma= -5.00	time=0.00  	ACC=0.971	Gmean=0.971	SVs=13 (7,6)
+log C=  7.50	log gamma=-10.00	time=0.00  	ACC=0.968	Gmean=0.968	SVs=9 (4,5)
+log C=  2.50	log gamma= 10.00	time=0.00  	ACC=0.499	Gmean=0.000	SVs=174 (87,87)
+2nd sweep with logC=7.5 logGamma=-10
+log C: 7.5 log g: -10 AC:0.968 SN:0.980 SP:0.956 PPV:0.957 NPV:0.979 F1:0.968 GM:0.968 SV_min:4 SV_maj:5 TP:290 TN:282 FP:13 FN:6
+log C=  5.00	log gamma=-10.00	time=0.00  	ACC=0.971	Gmean=0.971	SVs=14 (7,7)
+log C=  7.50	log gamma= -2.50	time=0.00  	ACC=0.975	Gmean=0.975	SVs=42 (19,23)
+log C= 12.50	log gamma= -9.15	time=0.00  	ACC=0.968	Gmean=0.968	SVs=9 (4,5)
+log C= 15.00	log gamma= -5.00	time=0.00  	ACC=0.971	Gmean=0.971	SVs=13 (7,6)
+BEST (12.5,-9.15)
+log C: 12.5 log g: -9.153 AC:0.968 SN:0.980 SP:0.956 PPV:0.957 NPV:0.979 F1:0.968 GM:0.968 SV_min:4 SV_maj:5 TP:290 TN:282 FP:13 FN:6
+init train time: 0.0716
+inital validation on testing:
+log C: 12.5 log g: -9.153 AC:0.966 SN:0.965 SP:0.968 PPV:0.967 NPV:0.965 F1:0.966 GM:0.966 SV_min:4 SV_maj:5 TP:714 TN:715 FP:24 FN:26
+init test time: 0.00201
+UD refinement at level 1
+minority uncoarsed
+uncoarsened nodes 2963 SV 4 resulting new_data 29
+majority uncoarsed
+uncoarsened nodes 2958 SV 5 resulting new_data 31
+current level nodes min 29 maj 31
+2nd sweep with logC=12.5 logGamma=-9.15
+log C= 10.00	log gamma= -9.15	time=0.00  	ACC=0.934	Gmean=0.934	SVs=19 (11,8)
+log C= 12.50	log gamma= -1.65	time=0.00  	ACC=0.567	Gmean=0.368	SVs=60 (29,31)
+log C= 15.02	log gamma=-15.20	time=0.00  	ACC=0.936	Gmean=0.936	SVs=15 (9,6)
+log C= 15.00	log gamma= -4.15	time=0.00  	ACC=0.942	Gmean=0.942	SVs=52 (26,26)
+log C= 15.00	log gamma= -6.65	time=0.00  	ACC=0.931	Gmean=0.930	SVs=24 (12,12)
+log C= 12.50	log gamma= -9.15	time=0.00  	ACC=0.934	Gmean=0.934	SVs=19 (11,8)
+BEST (15,-15.2)
+log C: 15.019 log g: -15.2 AC:0.936 SN:0.929 SP:0.942 PPV:0.942 NPV:0.930 F1:0.935 GM:0.936 SV_min:9 SV_maj:6 TP:275 TN:278 FP:17 FN:21
+refinement at level 0 took 0.0167
+refinement time 0.0167
+best validation on testing data:
+test time 0.00202
+log C: 12.5 log g: -9.153 AC:0.966 SN:0.965 SP:0.968 PPV:0.967 NPV:0.965 F1:0.966 GM:0.966 SV_min:4 SV_maj:5 TP:714 TN:715 FP:24 FN:26
+iteration time: 0.2317
 ------------- K-FOLD ITERATION 3 -------------
-fold time: 0.0938
+fold time: 0.0988
 graph - min: 2963 maj: 2958
+val - min: 296 maj: 295
 test - min: 740 maj: 739
-sample - min: 272 maj: 263
-no of coarser vertices 88 and no of edges 5340
-no of coarser vertices 81 and no of edges 4506
-coarsening time: 0.069
-coarse nodes - min: 88 maj: 81
+calc new weights took 0.0001
+no of coarser vertices 79 and no of edges 4394
+calc new weights took 0.0001
+no of coarser vertices 83 and no of edges 4904
+coarsening time: 0.0451
+coarse nodes - min: 79 maj: 83
 1st sweep with initial logC=0 logGamma=0
-log C=5.00	log gamma=0.00  	ACC=0.508	Gmean=0.000	SVs=107 (54,53)
-log C=-5.00	log gamma=-2.50  	ACC=0.819	Gmean=0.795	SVs=135 (67,68)
-log C=10.00	log gamma=7.50  	ACC=0.508	Gmean=0.000	SVs=169 (88,81)
-log C=-2.50	log gamma=5.00  	ACC=0.508	Gmean=0.000	SVs=169 (88,81)
-log C=0.00	log gamma=-7.50  	ACC=0.989	Gmean=0.989	SVs=42 (20,22)
-log C=15.00	log gamma=2.50  	ACC=0.508	Gmean=0.000	SVs=169 (88,81)
-log C=12.50	log gamma=-5.00  	ACC=0.974	Gmean=0.974	SVs=16 (9,7)
-log C=7.50	log gamma=-10.00  	ACC=0.972	Gmean=0.972	SVs=11 (6,5)
-log C=2.50	log gamma=10.00  	ACC=0.508	Gmean=0.000	SVs=169 (88,81)
+log C=  5.00	log gamma=  0.00	time=0.00  	ACC=0.514	Gmean=0.174	SVs=100 (49,51)
+log C= -5.00	log gamma= -2.50	time=0.00  	ACC=0.964	Gmean=0.964	SVs=130 (65,65)
+log C= 10.00	log gamma=  7.50	time=0.00  	ACC=0.501	Gmean=0.058	SVs=162 (79,83)
+log C= -2.50	log gamma=  5.00	time=0.00  	ACC=0.499	Gmean=0.000	SVs=162 (79,83)
+log C=  0.00	log gamma= -7.50	time=0.00  	ACC=0.973	Gmean=0.973	SVs=44 (22,22)
+log C= 15.00	log gamma=  2.50	time=0.00  	ACC=0.501	Gmean=0.058	SVs=161 (79,82)
+log C= 12.50	log gamma= -5.00	time=0.00  	ACC=0.966	Gmean=0.966	SVs=20 (10,10)
+log C=  7.50	log gamma=-10.00	time=0.00  	ACC=0.971	Gmean=0.971	SVs=13 (8,5)
+log C=  2.50	log gamma= 10.00	time=0.00  	ACC=0.501	Gmean=0.058	SVs=162 (79,83)
 2nd sweep with logC=7.5 logGamma=-10
-log C: 7.5 log g: -10 AC:0.972 SN:0.963 SP:0.981 PPV:0.981 NPV:0.963 F1:0.972 GM:0.972 SV_min:6 SV_maj:5 TP:262 TN:258 FP:5 FN:10
-log C=5.00	log gamma=-10.00  	ACC=0.981	Gmean=0.981	SVs=15 (8,7)
-log C=7.50	log gamma=-2.50  	ACC=0.815	Gmean=0.791	SVs=44 (24,20)
-log C=12.50	log gamma=-9.31  	ACC=0.972	Gmean=0.972	SVs=11 (6,5)
-log C=15.00	log gamma=-5.00  	ACC=0.974	Gmean=0.974	SVs=16 (9,7)
-BEST (12.5,-9.31)
-log C: 12.5 log g: -9.309 AC:0.972 SN:0.963 SP:0.981 PPV:0.981 NPV:0.963 F1:0.972 GM:0.972 SV_min:6 SV_maj:5 TP:262 TN:258 FP:5 FN:10
-init train time: 0.0464
+log C: 7.5 log g: -10 AC:0.971 SN:0.976 SP:0.966 PPV:0.967 NPV:0.976 F1:0.971 GM:0.971 SV_min:8 SV_maj:5 TP:289 TN:285 FP:10 FN:7
+log C=  5.00	log gamma=-10.00	time=0.00  	ACC=0.970	Gmean=0.970	SVs=17 (9,8)
+log C=  7.50	log gamma= -2.50	time=0.00  	ACC=0.949	Gmean=0.949	SVs=40 (20,20)
+log C= 12.50	log gamma=-11.54	time=0.00  	ACC=0.971	Gmean=0.971	SVs=13 (8,5)
+log C= 15.00	log gamma= -5.00	time=0.00  	ACC=0.966	Gmean=0.966	SVs=20 (10,10)
+BEST (12.5,-11.5)
+log C: 12.5 log g: -11.537 AC:0.971 SN:0.976 SP:0.966 PPV:0.967 NPV:0.976 F1:0.971 GM:0.971 SV_min:8 SV_maj:5 TP:289 TN:285 FP:10 FN:7
+init train time: 0.0743
 inital validation on testing:
-log C: 12.5 log g: -9.309 AC:0.973 SN:0.965 SP:0.981 PPV:0.981 NPV:0.965 F1:0.973 GM:0.973 SV_min:6 SV_maj:5 TP:714 TN:725 FP:14 FN:26
-init test time: 0.00108
-min hierarchy 1 -- maj hierarchy 1
+log C: 12.5 log g: -11.537 AC:0.974 SN:0.969 SP:0.978 PPV:0.978 NPV:0.969 F1:0.974 GM:0.974 SV_min:8 SV_maj:5 TP:717 TN:723 FP:16 FN:23
+init test time: 0.00229
+UD refinement at level 1
 minority uncoarsed
-uncoarsened nodes 2963 SV 6 resulting neighbors 205
+uncoarsened nodes 2963 SV 8 resulting new_data 54
 majority uncoarsed
-uncoarsened nodes 2958 SV 5 resulting neighbors 23
-min hierarchy 0 -- maj hierarchy 0
-current level nodes min 205 maj 23
-2nd sweep with logC=12.5 logGamma=-9.31
-log C=10.00	log gamma=-9.31  	ACC=0.936	Gmean=0.933	SVs=25 (14,11)
-log C=12.50	log gamma=-1.81  	ACC=0.510	Gmean=0.062	SVs=228 (205,23)
-log C=15.00	log gamma=-10.24  	ACC=0.940	Gmean=0.937	SVs=23 (13,10)
-log C=15.01	log gamma=-4.31  	ACC=0.860	Gmean=0.846	SVs=84 (62,22)
-log C=15.00	log gamma=-6.81  	ACC=0.907	Gmean=0.901	SVs=40 (25,15)
-log C=12.50	log gamma=-9.31  	ACC=0.936	Gmean=0.933	SVs=25 (14,11)
-BEST (15,-10.2)
-log C: 15.001 log g: -10.241 AC:0.940 SN:0.996 SP:0.882 PPV:0.897 NPV:0.996 F1:0.944 GM:0.937 SV_min:13 SV_maj:10 TP:271 TN:232 FP:31 FN:1
-refinement at level 0 took 0.0226
-refinement time 0.0227
+uncoarsened nodes 2958 SV 5 resulting new_data 58
+current level nodes min 54 maj 58
+2nd sweep with logC=12.5 logGamma=-11.5
+log C= 10.00	log gamma= -9.14	time=0.00  	ACC=0.937	Gmean=0.937	SVs=23 (6,17)
+log C= 12.50	log gamma= -4.04	time=0.00  	ACC=0.944	Gmean=0.944	SVs=79 (35,44)
+log C= 15.00	log gamma= -9.35	time=0.00  	ACC=0.937	Gmean=0.937	SVs=22 (6,16)
+log C= 14.98	log gamma= -6.54	time=0.00  	ACC=0.936	Gmean=0.936	SVs=32 (13,19)
+log C= 15.00	log gamma= -9.04	time=0.00  	ACC=0.939	Gmean=0.939	SVs=23 (6,17)
+log C= 12.50	log gamma=-11.54	time=0.00  	ACC=0.941	Gmean=0.941	SVs=20 (6,14)
+BEST (12.5,-11.5)
+log C: 12.5 log g: -11.537 AC:0.941 SN:0.959 SP:0.922 PPV:0.925 NPV:0.958 F1:0.942 GM:0.941 SV_min:6 SV_maj:14 TP:284 TN:272 FP:23 FN:12
+refinement at level 0 took 0.0195
+refinement time 0.0196
 best validation on testing data:
-test time 0.00125
-log C: 12.5 log g: -9.309 AC:0.973 SN:0.965 SP:0.981 PPV:0.981 NPV:0.965 F1:0.973 GM:0.973 SV_min:6 SV_maj:5 TP:714 TN:725 FP:14 FN:26
-iteration time: 0.234
+test time 0.00218
+log C: 12.5 log g: -11.537 AC:0.974 SN:0.969 SP:0.978 PPV:0.978 NPV:0.969 F1:0.974 GM:0.974 SV_min:8 SV_maj:5 TP:717 TN:723 FP:16 FN:23
+iteration time: 0.2401
 ------------- K-FOLD ITERATION 4 -------------
-fold time: 0.0956
+fold time: 0.0996
 graph - min: 2963 maj: 2958
+val - min: 296 maj: 295
 test - min: 740 maj: 739
-sample - min: 306 maj: 293
-no of coarser vertices 101 and no of edges 7156
-no of coarser vertices 77 and no of edges 4304
-coarsening time: 0.0696
-coarse nodes - min: 101 maj: 77
+calc new weights took 0.0001
+no of coarser vertices 88 and no of edges 5118
+calc new weights took 0.0001
+no of coarser vertices 85 and no of edges 5520
+coarsening time: 0.0462
+coarse nodes - min: 88 maj: 85
 1st sweep with initial logC=0 logGamma=0
-log C=5.00	log gamma=0.00  	ACC=0.511	Gmean=0.000	SVs=111 (65,46)
-log C=-5.00	log gamma=-2.50  	ACC=0.611	Gmean=0.453	SVs=135 (68,67)
-log C=10.00	log gamma=7.50  	ACC=0.511	Gmean=0.000	SVs=178 (101,77)
-log C=-2.50	log gamma=5.00  	ACC=0.511	Gmean=0.000	SVs=178 (101,77)
-log C=0.00	log gamma=-7.50  	ACC=0.982	Gmean=0.982	SVs=46 (24,22)
-log C=15.00	log gamma=2.50  	ACC=0.511	Gmean=0.000	SVs=178 (101,77)
-log C=12.50	log gamma=-5.00  	ACC=0.972	Gmean=0.972	SVs=16 (7,9)
-log C=7.50	log gamma=-10.00  	ACC=0.968	Gmean=0.968	SVs=11 (4,7)
-log C=2.50	log gamma=10.00  	ACC=0.511	Gmean=0.000	SVs=178 (101,77)
+log C=  5.00	log gamma=  0.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=115 (59,56)
+log C= -5.00	log gamma= -2.50	time=0.00  	ACC=0.662	Gmean=0.567	SVs=135 (68,67)
+log C= 10.00	log gamma=  7.50	time=0.00  	ACC=0.501	Gmean=0.000	SVs=173 (88,85)
+log C= -2.50	log gamma=  5.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=173 (88,85)
+log C=  0.00	log gamma= -7.50	time=0.00  	ACC=0.985	Gmean=0.985	SVs=46 (22,24)
+log C= 15.00	log gamma=  2.50	time=0.00  	ACC=0.501	Gmean=0.000	SVs=173 (88,85)
+log C= 12.50	log gamma= -5.00	time=0.00  	ACC=0.980	Gmean=0.980	SVs=20 (10,10)
+log C=  7.50	log gamma=-10.00	time=0.00  	ACC=0.983	Gmean=0.983	SVs=10 (7,3)
+log C=  2.50	log gamma= 10.00	time=0.00  	ACC=0.501	Gmean=0.000	SVs=173 (88,85)
 2nd sweep with logC=7.5 logGamma=-10
-log C: 7.5 log g: -10 AC:0.968 SN:0.977 SP:0.959 PPV:0.961 NPV:0.976 F1:0.969 GM:0.968 SV_min:4 SV_maj:7 TP:299 TN:281 FP:12 FN:7
-log C=5.00	log gamma=-10.00  	ACC=0.978	Gmean=0.978	SVs=18 (10,8)
-log C=7.50	log gamma=-2.50  	ACC=0.937	Gmean=0.934	SVs=38 (20,18)
-log C=12.50	log gamma=-9.27  	ACC=0.968	Gmean=0.968	SVs=11 (4,7)
-log C=15.00	log gamma=-5.00  	ACC=0.972	Gmean=0.972	SVs=16 (7,9)
-BEST (12.5,-9.27)
-log C: 12.5 log g: -9.2729 AC:0.968 SN:0.977 SP:0.959 PPV:0.961 NPV:0.976 F1:0.969 GM:0.968 SV_min:4 SV_maj:7 TP:299 TN:281 FP:12 FN:7
-init train time: 0.0539
+log C: 7.5 log g: -10 AC:0.983 SN:0.980 SP:0.986 PPV:0.986 NPV:0.980 F1:0.983 GM:0.983 SV_min:7 SV_maj:3 TP:290 TN:291 FP:4 FN:6
+log C=  5.00	log gamma=-10.00	time=0.00  	ACC=0.980	Gmean=0.980	SVs=16 (10,6)
+log C=  7.50	log gamma= -2.50	time=0.00  	ACC=0.621	Gmean=0.491	SVs=44 (25,19)
+log C= 12.50	log gamma= -9.74	time=0.00  	ACC=0.983	Gmean=0.983	SVs=10 (7,3)
+log C= 15.00	log gamma= -5.00	time=0.00  	ACC=0.980	Gmean=0.980	SVs=20 (10,10)
+BEST (12.5,-9.74)
+log C: 12.5 log g: -9.7435 AC:0.983 SN:0.980 SP:0.986 PPV:0.986 NPV:0.980 F1:0.983 GM:0.983 SV_min:7 SV_maj:3 TP:290 TN:291 FP:4 FN:6
+init train time: 0.075
 inital validation on testing:
-log C: 12.5 log g: -9.2729 AC:0.964 SN:0.966 SP:0.962 PPV:0.962 NPV:0.966 F1:0.964 GM:0.964 SV_min:4 SV_maj:7 TP:715 TN:711 FP:28 FN:25
-init test time: 0.00105
-min hierarchy 1 -- maj hierarchy 1
+log C: 12.5 log g: -9.7435 AC:0.983 SN:0.982 SP:0.984 PPV:0.984 NPV:0.982 F1:0.983 GM:0.983 SV_min:7 SV_maj:3 TP:727 TN:727 FP:12 FN:13
+init test time: 0.00209
+UD refinement at level 1
 minority uncoarsed
-uncoarsened nodes 2963 SV 4 resulting neighbors 41
+uncoarsened nodes 2963 SV 7 resulting new_data 58
 majority uncoarsed
-uncoarsened nodes 2958 SV 7 resulting neighbors 45
-min hierarchy 0 -- maj hierarchy 0
-current level nodes min 41 maj 45
-2nd sweep with logC=12.5 logGamma=-9.27
-log C=10.00	log gamma=-9.27  	ACC=0.943	Gmean=0.943	SVs=22 (10,12)
-log C=12.50	log gamma=-1.77  	ACC=0.578	Gmean=0.423	SVs=86 (41,45)
-log C=14.99	log gamma=-9.90  	ACC=0.947	Gmean=0.947	SVs=20 (10,10)
-log C=14.98	log gamma=-4.27  	ACC=0.958	Gmean=0.958	SVs=63 (33,30)
-log C=15.00	log gamma=-6.77  	ACC=0.953	Gmean=0.953	SVs=33 (15,18)
-log C=12.50	log gamma=-9.27  	ACC=0.943	Gmean=0.943	SVs=22 (10,12)
-BEST (15,-9.9)
-log C: 14.994 log g: -9.9001 AC:0.947 SN:0.931 SP:0.962 PPV:0.963 NPV:0.931 F1:0.947 GM:0.947 SV_min:10 SV_maj:10 TP:285 TN:282 FP:11 FN:21
-refinement at level 0 took 0.0119
-refinement time 0.012
+uncoarsened nodes 2958 SV 3 resulting new_data 67
+current level nodes min 58 maj 67
+2nd sweep with logC=12.5 logGamma=-9.74
+log C= 10.00	log gamma= -9.74	time=0.00  	ACC=0.956	Gmean=0.956	SVs=21 (10,11)
+log C= 12.50	log gamma= -2.24	time=0.00  	ACC=0.819	Gmean=0.801	SVs=125 (58,67)
+log C= 15.00	log gamma=-11.82	time=0.00  	ACC=0.956	Gmean=0.956	SVs=20 (10,10)
+log C= 14.99	log gamma= -4.74	time=0.00  	ACC=0.961	Gmean=0.961	SVs=53 (29,24)
+log C= 15.00	log gamma= -7.24	time=0.00  	ACC=0.964	Gmean=0.964	SVs=30 (15,15)
+log C= 12.50	log gamma= -9.74	time=0.00  	ACC=0.956	Gmean=0.956	SVs=21 (10,11)
+BEST (15,-11.8)
+log C: 14.997 log g: -11.82 AC:0.956 SN:0.932 SP:0.980 PPV:0.979 NPV:0.935 F1:0.955 GM:0.956 SV_min:10 SV_maj:10 TP:276 TN:289 FP:6 FN:20
+refinement at level 0 took 0.0324
+refinement time 0.0325
 best validation on testing data:
-test time 0.00131
-log C: 12.5 log g: -9.2729 AC:0.964 SN:0.966 SP:0.962 PPV:0.962 NPV:0.966 F1:0.964 GM:0.964 SV_min:4 SV_maj:7 TP:715 TN:711 FP:28 FN:25
-iteration time: 0.233
+test time 0.0101
+log C: 12.5 log g: -9.7435 AC:0.983 SN:0.982 SP:0.984 PPV:0.984 NPV:0.982 F1:0.983 GM:0.983 SV_min:7 SV_maj:3 TP:727 TN:727 FP:12 FN:13
+iteration time: 0.2635
 -------------- K-FOLD DONE -------------- 
-KFOLD_TIME	0.0947
-COARSE_TIME	0.0691
-COARSE_MIN	89.8000
-COARSE_MAJ	81.8000
+KFOLD_TIME	0.0978
+COARSE_TIME	0.0453
+COARSE_MIN	86.0000
+COARSE_MAJ	87.2000
 HIERARCHY_MIN_SIZE	1.0000
 HIERARCHY_MAJ_SIZE	1.0000
-	INIT_TRAIN_TIME	0.0526
-INIT_AC  	0.9678
-INIT_GM  	0.9676
-INIT_AC_TEST	0.9682
-INIT_GM_TEST	0.9682
-LEVEL0_AC	0.9425
-LEVEL0_GM	0.9417
-	REFINEMENT_TIME	0.0155
+	INIT_TRAIN_TIME	0.0781
+INIT_AC  	0.9662
+INIT_GM  	0.9659
+INIT_AC_TEST	0.9697
+INIT_GM_TEST	0.9696
+LEVEL0_AC	0.9472
+LEVEL0_GM	0.9471
+	REFINEMENT_TIME	0.0234
 [BEST_INDEX]
-fold 0: 0
+fold 0: 1
 fold 1: 0
 fold 2: 0
 fold 3: 0
 fold 4: 0
-BEST_AC	0.9678
-BEST_SN	0.9670
-BEST_SP	0.9683
-BEST_GM	0.9676
+BEST_AC	0.9682
+BEST_SN	0.9723
+BEST_SP	0.9641
+BEST_GM	0.9680
 BEST_F1	0.9683
-	TEST_TIME	0.0012
-BEST_AC_TEST	0.9682
-BEST_SN_TEST	0.9673
-BEST_SP_TEST	0.9691
-BEST_GM_TEST	0.9682
-BEST_F1_TEST	0.9682
-TIME	0.2335
+	TEST_TIME	0.0038
+BEST_AC_TEST	0.9635
+BEST_SN_TEST	0.9597
+BEST_SP_TEST	0.9673
+BEST_GM_TEST	0.9632
+BEST_F1_TEST	0.9632
+TIME	0.2485
+#+end_example
+
+*** Options
+
+#+BEGIN_SRC sh :results output verbatim
+./optimized_output/mlsvm --help
+#+END_SRC
+
+# #+RESULTS:
+#+begin_example
+Usage: ./optimized_output/mlsvm [-b] [--help] FILE [--seed=<int>] [-e <int>] [-k <int>] [-s <double>] [--validation=TYPE] [--validation_percent=<double>] [--validation_seperate] [-n <int>] [--stop_rule=VARIANT] [--fix_num_vert_stop=<int>] [--matching=TYPE] [--cluster_upperbound=<int>] [--label_propagation_iterations=<int>] [--diameter_upperbound=<double>] [--refinement=TYPE] [--num_skip_ms=<int>] [--no_inherit_ud] [--export_graph] [--output_filename=<string>] [--timeout=<int>] [-c <int>]
+  --help                                   Print help.
+  FILE                                     Path to graph file to partition.
+  --seed=<int>                             Seed to use for the PRNG.
+  -e, --num_experiments=<int>              Number of experiments i.e. full kfold runs (default 1)
+  -k, --kfold_iterations=<int>             Number of kfold iterations (Default: 5)
+  -s, --sample=<double>                    Percentage of data that is use. Usefull if very slow on large datasets (Default: 1.0 aka use all data)
+  --validation=TYPE                        Type of validation. One of {kfold, kfold_import, once, train_test_split} (Default: kfold)
+  --validation_percent=<double>            Percentage of data that is use for validation (Default: 0.1)
+  --validation_seperate                    Should the validation data be also used for training (Default: yes for single_level no for mlsvm - this flag invertse the choice)
+  -n, --num_nn=<int>                       Number of nearest neighbors to consider when building the graphs. (Default: 10)
+  -b, --bidirectional                      Make the nearest neighbor graph bidirectional
+  --stop_rule=VARIANT                      Stop rule to use. One of {simple, multiplek, strong}. Default: simple
+  --fix_num_vert_stop=<int>                Number of vertices to fix stop coarsening at.
+  --matching=TYPE                          Type of matchings to use during coarsening. One of {random, gpa, randomgpa, lp_clustering, simple_clustering, low_diameter}.
+  --cluster_upperbound=<int>               Set a size-constraint on the size of a cluster. Default: none
+  --label_propagation_iterations=<int>     Set the number of label propgation iterations. Default: 10.
+  --diameter_upperbound=<double>           Set a size-constraint on the size of a low diameter cluster. Default: 20
+  --refinement=TYPE                        Type of refinement. One of {ud, bayes} (Default: ud)
+  --num_skip_ms=<int>                      Size of the problem on which no model selection is skipped and only the best parameters of the previous level are used (Default: 10000)
+  --no_inherit_ud                          Don't inherit the first UD sweep and do only the second UD sweep in the refinement.
+  --export_graph                           Export the graph at every level (this exits after one multilevel cycle).
+  --output_filename=<string>               Specify the name of the output file (that contains the partition).
+  --timeout=<int>                          Timeout in seconds after the timeout (for a single kfold) run is readched the program is aborted (Default: 0)
+  -c, --n_cores=<int>                      How many cores are used (Default: 0 aka. every core)
 #+end_example
