Update readme options

--- a/README.org
+++ b/README.org
@@ -438,7 +438,7 @@ TIME	0.2485
 
 # #+RESULTS:
 #+begin_example
-Usage: ./optimized_output/mlsvm [-b] [--help] FILE [--seed=<int>] [-e <int>] [-k <int>] [-s <double>] [--validation=TYPE] [--validation_percent=<double>] [--validation_seperate] [-n <int>] [--stop_rule=VARIANT] [--fix_num_vert_stop=<int>] [--matching=TYPE] [--cluster_upperbound=<int>] [--label_propagation_iterations=<int>] [--diameter_upperbound=<double>] [--refinement=TYPE] [--num_skip_ms=<int>] [--no_inherit_ud] [--export_graph] [--output_filename=<string>] [--timeout=<int>] [-c <int>]
+Usage: ./optimized_output/mlsvm [-b] [--help] FILE [--seed=<int>] [-e <int>] [-k <int>] [-s <double>] [--validation=TYPE] [--validation_percent=<double>] [--validation_seperate] [-n <int>] [--stop_rule=VARIANT] [--fix_num_vert_stop=<int>] [--matching=TYPE] [--cluster_upperbound=<int>] [--label_propagation_iterations=<int>] [--diameter_upperbound=<double>] [--refinement=TYPE] [-C <double>] [-g <double>] [--num_skip_ms=<int>] [--no_inherit_ud] [--export_graph] [--output_filename=<string>] [--export_model=<string>] [--timeout=<int>] [-c <int>]
   --help                                   Print help.
   FILE                                     Path to graph file to partition.
   --seed=<int>                             Seed to use for the PRNG.
@@ -450,17 +450,20 @@ Usage: ./optimized_output/mlsvm [-b] [--help] FILE [--seed=<int>] [-e <int>] [-k
   --validation_seperate                    Should the validation data be also used for training (Default: yes for single_level no for mlsvm - this flag invertse the choice)
   -n, --num_nn=<int>                       Number of nearest neighbors to consider when building the graphs. (Default: 10)
   -b, --bidirectional                      Make the nearest neighbor graph bidirectional
-  --stop_rule=VARIANT                      Stop rule to use. One of {simple, multiplek, strong}. Default: simple
+  --stop_rule=VARIANT                      Stop rule to use. One of {simple-fix}. Default: simple-fix
   --fix_num_vert_stop=<int>                Number of vertices to fix stop coarsening at.
   --matching=TYPE                          Type of matchings to use during coarsening. One of {random, gpa, randomgpa, lp_clustering, simple_clustering, low_diameter}.
   --cluster_upperbound=<int>               Set a size-constraint on the size of a cluster. Default: none
   --label_propagation_iterations=<int>     Set the number of label propgation iterations. Default: 10.
   --diameter_upperbound=<double>           Set a size-constraint on the size of a low diameter cluster. Default: 20
-  --refinement=TYPE                        Type of refinement. One of {ud, bayes} (Default: ud)
+  --refinement=TYPE                        Type of refinement. One of {ud, bayes, fix} (Default: ud)
+  -C <double>                              value of the C parameter when using fix refinement. (use logarithmic scale)
+  -g <double>                              value of the gamma parameter when using fix refinement. (use logarithmic scale)
   --num_skip_ms=<int>                      Size of the problem on which no model selection is skipped and only the best parameters of the previous level are used (Default: 10000)
   --no_inherit_ud                          Don't inherit the first UD sweep and do only the second UD sweep in the refinement.
   --export_graph                           Export the graph at every level (this exits after one multilevel cycle).
   --output_filename=<string>               Specify the name of the output file (that contains the partition).
+  --export_model=<string>                  Specify the path of the output model (it contains the trained SVM model for later usage) ( a number and ".model" will be appended to the path).
   --timeout=<int>                          Timeout in seconds after the timeout (for a single kfold) run is readched the program is aborted (Default: 0)
   -c, --n_cores=<int>                      How many cores are used (Default: 0 aka. every core)
 #+end_example
